add(): add functionality for events
